crates/ruff_python_parser/tests/snapshots/invalid_syntax@single_starred_assignment_target.py.snap
---
source: crates/ruff_python_parser/tests/fixtures.rs
input_file: crates/ruff_python_parser/resources/inline/err/single_starred_assignment_target.py
---
## AST

```
Module(
    ModModule {
        node_index: 0,
        range: 0..10,
        body: [
            Assign(
                StmtAssign {
                    node_index: 0,
                    range: 0..9,
                    targets: [
                        Starred(
                            ExprStarred {
                                node_index: 0,
                                range: 0..2,
                                value: Name(
                                    ExprName {
                                        node_index: 0,
                                        range: 1..2,
                                        id: Name("a"),
                                        ctx: Store,
                                    },
                                ),
                                ctx: Store,
                            },
                        ),
                    ],
                    value: Tuple(
                        ExprTuple {
                            node_index: 0,
                            range: 5..9,
                            elts: [
                                NumberLiteral(
                                    ExprNumberLiteral {
                                        node_index: 0,
                                        range: 6..7,
                                        value: Int(
                                            1,
                                        ),
                                    },
                                ),
                            ],
                            ctx: Load,
                            parenthesized: true,
                        },
                    ),
                },
            ),
        ],
    },
)
```
## Semantic Syntax Errors

  |
1 | *a = (1,)
  | ^^ Syntax Error: starred assignment target must be in a list or tuple
  |
